	* [spreadsheet] when filling a float column with row numbers, automatically convert its type to integer
	* [spreadsheet] when filling an integer column with function values, automatically convert its type to float
	* [spreadsheet] data manipulation: add/subtract/multiply/divide for column values
	* [spreadsheet] export to SQLite
	* [worksheet] Allow to specify different border shapes for labels (rectangle, eclipse, etc.)
	* [worksheet] Allow to rotate plot legends
	* [worksheet] Better positioning of rotated axis tick labels
	* [worksheet] Allow to make plots not-interactive (ignore mouse drag and wheel events) to avoid unwanted occasional panning and zooming
	* Allow to connect to SQL databases via ODBC
	* Show the amount of consumed memory in the status bar (optional)
	* Allow to change the settings for different computer algebra systems (Maxima, etc.) directly in LabPlot (embedd Cantor's settings widgets)

Bug fixes:
	* Fixed several problems in live data support
	* [spreadsheet] properly calculate function values out of integer x-values
	* [matrix] fix editing integer values
	* [import] fix preview update and add missing close of netcdf files
	* Don't crash when a scaling factor equal to zero was set for axis

-----2.5-----
New features:
	* Support for reading and plotting of live-data
	* Improved data fitting
		* Automatically guess parameter of custom models
		* Better result presentation
		* Support different weight types
		* Consider given x- and y-error when fitting (can be switched off)
		* Show t statistics, P > |t| and confidence interval
		* Calculate p-value for chi-square and F test in nonlinear fitting
		* added fit models for most statistical distributions
	* Improved theming
		* Apply themes to worksheet and to all its children
		* Respect theme settings also in plot legends and labels
		* Allow to disable theming in worksheets and plots after a theme was selected
		* Show currently active theme in the "Apply theme" button